adding max length to text input

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <textarea
         id="input-txt"
         type="text"
+        maxlength="200"
         placeholder="Write your endorsement here"
       >
       </textarea>
