--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         type="text"
         maxlength="200"
         placeholder="Write your endorsement here"
-      >
-      </textarea>
-
+      ></textarea>
       <button id="publish-btn">Publish</button>
       <ul id="endorsement-el"></ul>
     </div>
