Add Endorsment text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         placeholder="Write your endorsement here"
       ></textarea>
       <button id="publish-btn">Publish</button>
+      <h2>Your Endorsements:</h2>
       <ul id="endorsement-el"></ul>
     </div>
     <script src="index.js" type="module"></script>
