disable the btn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         maxlength="300"
         placeholder="Write your endorsement here"
       ></textarea>
-      <button id="publish-btn">Publish</button>
+      <button id="publish-btn" disabled>Publish</button>
       <h2>Your Endorsements:</h2>
       <ul id="endorsement-el"></ul>
     </div>
