adding deleteAllData btn

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         placeholder="Write your endorsement here"
       ></textarea>
       <button id="publish-btn" disabled>Publish</button>
+      <button id="delete-all-btn">Delete All</button>
+
       <h2>Your Endorsements:</h2>
       <ul id="endorsement-el"></ul>
     </div>
