adding btn into a new div

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         maxlength="300"
         placeholder="Write your endorsement here"
       ></textarea>
+    <div>
       <button id="publish-btn" disabled>Publish</button>
       <button id="delete-all-btn">Delete All</button>
-
+    </div>
       <h2>Your Endorsements:</h2>
       <ul id="endorsement-el"></ul>
     </div>
